[gd_scene load_steps=9 format=3 uid="uid://3u37cwxbn6fa"]

[ext_resource type="Script" uid="uid://e2wbt04gngg0" path="res://scenes/main_menu/main_menu.gd" id="1_0ebjn"]
[ext_resource type="FontFile" uid="uid://cfhhd352mvmsc" path="res://graphics/font/HanaleiFill-Regular.ttf" id="1_fsom3"]
[ext_resource type="Texture2D" uid="uid://8c8ttxgvoqed" path="res://graphics/player/miner_animation.png" id="3_ob46e"]

[sub_resource type="Theme" id="Theme_0ebjn"]
default_font = ExtResource("1_fsom3")

[sub_resource type="Theme" id="Theme_ob46e"]
default_font = ExtResource("1_fsom3")

[sub_resource type="Animation" id="Animation_uqeha"]
resource_name = "Main_Menu_IDle"
length = 1.33
step = 0.33
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33, 0.66, 0.99),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_wem23"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ovsr"]
_data = {
&"Main_Menu_IDle": SubResource("Animation_uqeha"),
&"RESET": SubResource("Animation_wem23")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ebjn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.384314, 0.0352941, 0.309804)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.95
anchor_right = 0.15
anchor_bottom = 0.95
offset_left = 0.399998
offset_top = -63.6
offset_right = 86.4
offset_bottom = 0.400024
grow_vertical = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_0ebjn")
text = "Start Game
"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ob46e")
text = "Quit
"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
root_node = NodePath("../MinerIdle")
libraries = {
&"": SubResource("AnimationLibrary_3ovsr")
}
autoplay = "Main_Menu_IDle"

[node name="MinerIdle" type="Sprite2D" parent="Control"]
position = Vector2(-75, -71)
scale = Vector2(-3.384, 3.384)
texture = ExtResource("3_ob46e")
hframes = 4
vframes = 6

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="animation_finished" from="Control/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
